Remove pattern_text feature flag